--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 html {
   scroll-behavior: smooth;
 }
+
+@font-face {
+  font-family: cinzel;
+  src: url("./assets/fonts/cinzel-font/CINZEL/Cinzel-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
