--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ html {
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: comfortaa;
+  src: url("./assets//fonts//comfortaa-font/Comfortaa-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
